translation-tool/inputs/source_meta/objects/HSvc_OperationalSLACalculation__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_Action__c</fullName>
        <label>Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept Payment</fullName>
                </value>
                <value>
                    <fullName>Ack customer</fullName>
                </value>
                <value>
                    <fullName>Acknowledge customer</fullName>
                </value>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Address bandwidth</fullName>
                </value>
                <value>
                    <fullName>Adjust appointment</fullName>
                </value>
                <value>
                    <fullName>Adjust browser settings</fullName>
                </value>
                <value>
                    <fullName>Adjust due date</fullName>
                </value>
                <value>
                    <fullName>Adjust service</fullName>
                </value>
                <value>
                    <fullName>Advise PC clean up</fullName>
                </value>
                <value>
                    <fullName>Application restart</fullName>
                </value>
                <value>
                    <fullName>Apply adjustment</fullName>
                </value>
                <value>
                    <fullName>Apply adjustments</fullName>
                </value>
                <value>
                    <fullName>Apply credits</fullName>
                </value>
                <value>
                    <fullName>Apply extension</fullName>
                </value>
                <value>
                    <fullName>Apply payment</fullName>
                </value>
                <value>
                    <fullName>Apply Token(s) from bank</fullName>
                </value>
                <value>
                    <fullName>Apply tokens</fullName>
                </value>
                <value>
                    <fullName>Begin prov new service</fullName>
                </value>
                <value>
                    <fullName>Cancel account</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Communicate to customer</fullName>
                </value>
                <value>
                    <fullName>communicate to PM</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete investigate</fullName>
                </value>
                <value>
                    <fullName>Complete report</fullName>
                </value>
                <value>
                    <fullName>Complete research</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Contact customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Active__c</fullName>
        <formula>IF( HSvc_ExpiryDate__c  &lt;  TODAY() , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Actual_Issue__c</fullName>
        <label>Actual Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Application</fullName>
                </value>
                <value>
                    <fullName>3rd Party Application Issue</fullName>
                </value>
                <value>
                    <fullName>3rd party Device Issue</fullName>
                </value>
                <value>
                    <fullName>3rd Party Equip</fullName>
                </value>
                <value>
                    <fullName>Ability to Solve Issue</fullName>
                </value>
                <value>
                    <fullName>Accessibility/Wait times</fullName>
                </value>
                <value>
                    <fullName>Account not Set-up</fullName>
                </value>
                <value>
                    <fullName>Account Past Due</fullName>
                </value>
                <value>
                    <fullName>Activation Failure</fullName>
                </value>
                <value>
                    <fullName>Add Authorized User</fullName>
                </value>
                <value>
                    <fullName>Add Core Service</fullName>
                </value>
                <value>
                    <fullName>Add New Core Service</fullName>
                </value>
                <value>
                    <fullName>Add New Premium Service</fullName>
                </value>
                <value>
                    <fullName>Add Premium Service</fullName>
                </value>
                <value>
                    <fullName>Add professional Voice Install</fullName>
                </value>
                <value>
                    <fullName>Add Voice Service</fullName>
                </value>
                <value>
                    <fullName>Add Wireless Router</fullName>
                </value>
                <value>
                    <fullName>Adjust service</fullName>
                </value>
                <value>
                    <fullName>Administrator login</fullName>
                </value>
                <value>
                    <fullName>Advertising/Marketing Accuracy</fullName>
                </value>
                <value>
                    <fullName>Agent Courtesy</fullName>
                </value>
                <value>
                    <fullName>Agent Courtesy/Professionalism</fullName>
                </value>
                <value>
                    <fullName>Agent Understandability</fullName>
                </value>
                <value>
                    <fullName>AP Issue</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Application Issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Customer</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Hughes</fullName>
                </value>
                <value>
                    <fullName>Apply Static IP</fullName>
                </value>
                <value>
                    <fullName>Appointment Confirmation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Case_Re_assign__c</fullName>
        <label>Case Owner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affinitas Phoenix MOD</fullName>
                </value>
                <value>
                    <fullName>Affinitas Phoenix Universal</fullName>
                </value>
                <value>
                    <fullName>CS Program Management NAD</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Consumer Auto Generated</fullName>
                </value>
                <value>
                    <fullName>DDAG</fullName>
                </value>
                <value>
                    <fullName>ESC Advanced Billing Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Advanced Tech Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Billing Level 1</fullName>
                </value>
                <value>
                    <fullName>ESC Control Desk</fullName>
                </value>
                <value>
                    <fullName>ESC Corporate CSM</fullName>
                </value>
                <value>
                    <fullName>ESC Digital Media</fullName>
                </value>
                <value>
                    <fullName>ESC Field Support Agent Terrestrial</fullName>
                </value>
                <value>
                    <fullName>ESC Field Support VSAT</fullName>
                </value>
                <value>
                    <fullName>ESC Frontline</fullName>
                </value>
                <value>
                    <fullName>ESC GEH</fullName>
                </value>
                <value>
                    <fullName>ESC Level 1 Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Network Associates Team</fullName>
                </value>
                <value>
                    <fullName>ESC Post Install Provisioning</fullName>
                </value>
                <value>
                    <fullName>ESC Program Management Support</fullName>
                </value>
                <value>
                    <fullName>ESC Provisioning Support</fullName>
                </value>
                <value>
                    <fullName>ESC Sales Support</fullName>
                </value>
                <value>
                    <fullName>Enterprise Auto Generated</fullName>
                </value>
                <value>
                    <fullName>Enterprise Billing - NAD</fullName>
                </value>
                <value>
                    <fullName>Hughes Call Center Manager</fullName>
                </value>
                <value>
                    <fullName>Hughes Corporate Community</fullName>
                </value>
                <value>
                    <fullName>Hughes Corporate ECC</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Network Engineering</fullName>
                </value>
                <value>
                    <fullName>Program Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Case_Status__c</fullName>
        <label>Case Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Open - Dispatch</fullName>
                </value>
                <value>
                    <fullName>Open - Escalated</fullName>
                </value>
                <value>
                    <fullName>Open - Holding for Parts</fullName>
                </value>
                <value>
                    <fullName>Open - Investigating</fullName>
                </value>
                <value>
                    <fullName>Open - PAM Case</fullName>
                </value>
                <value>
                    <fullName>Open - Provisioning Processing</fullName>
                </value>
                <value>
                    <fullName>Open - RMA</fullName>
                </value>
                <value>
                    <fullName>Open - Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Open - Web Case</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending - Callback</fullName>
                </value>
                <value>
                    <fullName>Pending - Construction</fullName>
                </value>
                <value>
                    <fullName>Pending - Customer Confirmation</fullName>
                </value>
                <value>
                    <fullName>Pending - Customer Contact</fullName>
                </value>
                <value>
                    <fullName>Pending - Customer Input</fullName>
                </value>
                <value>
                    <fullName>Pending - Install</fullName>
                </value>
                <value>
                    <fullName>Pending - Monitoring</fullName>
                </value>
                <value>
                    <fullName>Pending - NAP</fullName>
                </value>
                <value>
                    <fullName>Pending - Provisioning Group</fullName>
                </value>
                <value>
                    <fullName>Pending - Service Provider Closure</fullName>
                </value>
                <value>
                    <fullName>Pending - Site Access</fullName>
                </value>
                <value>
                    <fullName>Pending - Vendor Meet</fullName>
                </value>
                <value>
                    <fullName>Pending - Weather</fullName>
                </value>
                <value>
                    <fullName>Open - Upgrade</fullName>
                </value>
                <value>
                    <fullName>Pending - Engineering Action</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Open - In Progress</fullName>
                </value>
                <value>
                    <fullName>Open - On Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Case_Subtype__c</fullName>
        <label>Case Subtype</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
                <value>
                    <fullName>Cancel Core Service (Retention)</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Customer Communication</fullName>
                </value>
                <value>
                    <fullName>Customer Complaint</fullName>
                </value>
                <value>
                    <fullName>Customer follow-up</fullName>
                </value>
                <value>
                    <fullName>Discovery Error</fullName>
                </value>
                <value>
                    <fullName>DVR request</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Equipment issue</fullName>
                </value>
                <value>
                    <fullName>Gateway Provisioning</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Hughes Truck Roll</fullName>
                </value>
                <value>
                    <fullName>Install Issue</fullName>
                </value>
                <value>
                    <fullName>Internet Service</fullName>
                </value>
                <value>
                    <fullName>Key FOB provisioning</fullName>
                </value>
                <value>
                    <fullName>Leased equipment</fullName>
                </value>
                <value>
                    <fullName>myHughesNet Issue</fullName>
                </value>
                <value>
                    <fullName>NAP Truck Roll</fullName>
                </value>
                <value>
                    <fullName>NE Esc</fullName>
                </value>
                <value>
                    <fullName>New Circuit</fullName>
                </value>
                <value>
                    <fullName>New Site Monitoring</fullName>
                </value>
                <value>
                    <fullName>NMC Esc</fullName>
                </value>
                <value>
                    <fullName>Offers/Programs</fullName>
                </value>
                <value>
                    <fullName>Order Modification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound Program</fullName>
                </value>
                <value>
                    <fullName>Out of scope Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Case_Type__c</fullName>
        <label>Case Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Warranty Replacement</fullName>
                </value>
                <value>
                    <fullName>Chronic</fullName>
                </value>
                <value>
                    <fullName>NE Action</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>PM Action</fullName>
                </value>
                <value>
                    <fullName>Pre-install</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>PSR</fullName>
                </value>
                <value>
                    <fullName>Repair Field</fullName>
                </value>
                <value>
                    <fullName>Repair Remote</fullName>
                </value>
                <value>
                    <fullName>Replacement with No Return</fullName>
                </value>
                <value>
                    <fullName>Retail Support</fullName>
                </value>
                <value>
                    <fullName>Return for Credit</fullName>
                </value>
                <value>
                    <fullName>Return of Lease</fullName>
                </value>
                <value>
                    <fullName>Return of Lease Collect</fullName>
                </value>
                <value>
                    <fullName>Service Changes</fullName>
                </value>
                <value>
                    <fullName>Service Provisioning</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                    <default>true</default>
                    <label>Technical</label>
                </value>
                <value>
                    <fullName>Technician Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Customer_Request_Type__c</fullName>
        <label>Customer Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account past Due</fullName>
                </value>
                <value>
                    <fullName>Add/Remove Services</fullName>
                </value>
                <value>
                    <fullName>Add/Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Add new role</fullName>
                </value>
                <value>
                    <fullName>Automated Call</fullName>
                </value>
                <value>
                    <fullName>Billing Issues</fullName>
                </value>
                <value>
                    <fullName>Bill Inquiry/Dispute</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Center Esc</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t make calls</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t receive calls</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Receive Mail - Any</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Receive Mail - Specific Domain(s)</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Send Mail - Any</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Send Mail - Specific Domain(s)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel Transport</fullName>
                </value>
                <value>
                    <fullName>Cancel Voice</fullName>
                </value>
                <value>
                    <fullName>Cancel VSAT</fullName>
                </value>
                <value>
                    <fullName>Cannot Locate</fullName>
                </value>
                <value>
                    <fullName>Change Service</fullName>
                </value>
                <value>
                    <fullName>Change Services</fullName>
                </value>
                <value>
                    <fullName>Chronic site</fullName>
                </value>
                <value>
                    <fullName>Chronic Sites - Non Contract</fullName>
                </value>
                <value>
                    <fullName>Circuit provisioning</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Code Upgrade Cleanup</fullName>
                </value>
                <value>
                    <fullName>Community Support</fullName>
                </value>
                <value>
                    <fullName>Content Not Updating/Incorrect</fullName>
                </value>
                <value>
                    <fullName>Contract issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_EffectiveDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_SLATemplateName__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;}&quot;,TEXT( HSvc_SLA_Template__c ), &apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_SLA_Template__c</fullName>
        <label>SLA Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Handle Time</fullName>
                </value>
                <value>
                    <fullName>Customer Handle Time</fullName>
                </value>
                <value>
                    <fullName>Customer Service Handle Time</fullName>
                </value>
                <value>
                    <fullName>Field Service Handle Time</fullName>
                </value>
                <value>
                    <fullName>NAP Handle Time</fullName>
                </value>
                <value>
                    <fullName>NE Handle Time</fullName>
                </value>
                <value>
                    <fullName>NMC Handle Time</fullName>
                </value>
                <value>
                    <fullName>Other Hughes Handle Time</fullName>
                </value>
                <value>
                    <fullName>Other Partner Handle Time</fullName>
                </value>
                <value>
                    <fullName>PM Handle Time</fullName>
                </value>
                <value>
                    <fullName>Outage Calculator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_SuspectedAsset__c</fullName>
        <label>Product Grouping</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active QoS</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>BOM</fullName>
                </value>
                <value>
                    <fullName>BYOB</fullName>
                </value>
                <value>
                    <fullName>Customer Gateway</fullName>
                </value>
                <value>
                    <fullName>Customer Tools</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>DVR</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>Field Maintenance</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Guest Services</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Helpdesk Support</fullName>
                </value>
                <value>
                    <fullName>Install Support</fullName>
                </value>
                <value>
                    <fullName>Key FOB</fullName>
                </value>
                <value>
                    <fullName>Modem</fullName>
                </value>
                <value>
                    <fullName>Premium Services</fullName>
                </value>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>Satellite Broadband</fullName>
                </value>
                <value>
                    <fullName>Satellite Narrowband</fullName>
                </value>
                <value>
                    <fullName>Secure LAN</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Switch</fullName>
                </value>
                <value>
                    <fullName>Terrestrial Wireless</fullName>
                </value>
                <value>
                    <fullName>Terrestrial Wireline</fullName>
                </value>
                <value>
                    <fullName>VADB</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Wi-Fi</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Operational SLA Calculation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>HSvc_SLATemplateName__c</columns>
        <columns>HSvc_Case_Type__c</columns>
        <columns>HSvc_Case_Status__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLA-{0000}</displayFormat>
        <label>Operational SLA Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operational SLA Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HSvc_ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <errorConditionFormula>OR(HSvc_ExpiryDate__c &lt; TODAY(),HSvc_ExpiryDate__c &lt; HSvc_EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>HSvc_ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>